paragraph and comments

--- a/1-Intro2HTML/5-ParagraphsNComments/exercise.html
+++ b/1-Intro2HTML/5-ParagraphsNComments/exercise.html
@@ -28,6 +28,6 @@
       repellat. Consequuntur, perferendis."
     </p>
     <h3>Advertisement</h3>
-    <p>You can learn PHP from PHPTraining.com</p>
+    <p>You can learn PHP from PHP</p>
   </body>
 </html>
